# pyMGOS

./: .gitignore  .gitmodules
CMake/: CMakeLists.txt
CMake/MGOS/: CMakeLists.txt  PyMGOSCMakeLists.cmake
CMake/Test/: CMakeLists.txt
CMake/V/API_tier/: CMakeLists.txt
CMake/V/Core_tier/: CMakeLists.txt
CMake/V/Core_tier/Core_Pocket/: CMakeLists.txt
CMake/V/Geo_tier/Geo_GeoModel/: CMakeLists.txt
CMake/V/Geo_tier/Geo_Molecule/: CMakeLists.txt
CMake/V/Geo_tier/Geo_Voronoi3D/: CMakeLists.txt
CMake/V/VUFS/: CMakeLists.txt
Test/: Cavity_Triangulation.cpp  MGOS_Cavity_API_Test.cpp  mgos_basic_api.cpp  mgos_counter_api.cpp  mgos_evaluator_api.cpp  mgos_locator_api.cpp  mgos_prog1.cpp  mgos_verifier_api.cpp  testMGOS.cpp  testPyCavity_Triangulation.py  testPyMGOS.py  testPyMGOS_Cavity_API_Test.py  testPymgos_basic_api.py  testPymgos_counter_api.py  testPymgos_evaluator_api.py  testPymgos_locator_api.py  testPymgos_prog1.py  testPymgos_verifier_api.py
src/: init_PyMGOS.cpp
src/MGOS/: pyAtom.cpp  pyAtomPtr.cpp  pyAtomPtrSet.cpp  pyAtomTriplet.cpp  pyAtomTripletSet.cpp  pyMolecularChannel.cpp  pyMolecularChannelSet.cpp  pyMolecularGeometry.cpp  pyMolecularMassProperty.cpp  pyMolecularPocket.cpp  pyMolecularPocketSet.cpp  pyMolecularVoid.cpp  pyMolecularVoidSet.cpp  pySpineOfMolecularChannel.cpp
src/V/API_tier/: pyPoint3d.cpp  pySphere3d.cpp
