set(PROJECT_NAME VUFS)

################################################################################
# Source groups
################################################################################

set(Sources
    "${VUFS_ROOT}/src/2Dgeometry/Arc2D.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/BucketCellForDisks.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/BucketForDisk.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/Disk.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/DynamicDisk.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/Ellipse2D.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/EnclosingCircleOfCircles.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/Parabola2D.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/Polygon2D.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/RandomDiskGenerator.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/rg_BoundingBox2D.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/rg_BzCurve2D.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/rg_CBzCurve2D.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/rg_Circle2D.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/rg_Line2D.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/rg_Parabola2D.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/rg_Point2D.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/rg_PolynomialCurve2D.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/rg_QBZCurve2D.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/rg_RBzCurve2D.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/rg_RPolynomialCurve2D.cpp"
    "${VUFS_ROOT}/src/2Dgeometry/rg_RQBzCurve2D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/Arc3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/AxisAlignedBox.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/Circle3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/DistEventOnLineSegAndArc.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/DistFunc.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/Ellipsoid3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/Line3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/LineSegment3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/Plane.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/Polygon3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_Boundary3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_BoundingBox3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_Box3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_BSplineCurve3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_BSplineSurface3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_BzCurve3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_BzSurface3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_Cylinder3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_CylindericalSurface3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_EllipticArc3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_Extrusion3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_Frustum3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_Line3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_Link3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_Loop3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_NUBSplineCurve3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_NUBSplineSurface3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_NURBSplineCurve3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_NURBSplineSurface3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_Outline3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_PartialCylinder3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_Plane3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_Point3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_Polyline2D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_Polyline3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_PrimitiveBox3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_PrimitiveCylinder3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_PrimitiveExtrusion3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_PrimitiveFrustum3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_RBzCurve3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_RBzSurface3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_RevolvedSurface3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_Sphere3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_Tetrahedron.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_ToroidalSurface3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_Triangle.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_TrimmedNURBSSurface3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/rg_TrimmedSurface3D.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/Sphere.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/SquaredDistFuncLineSegArc.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/SquaredDistFuncLineSegCircle.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/SquaredDistFuncLineSegPoint.cpp"
    "${VUFS_ROOT}/src/3Dgeometry/TrisectorOfSpaceByArc.cpp"
    "${VUFS_ROOT}/src/Collections/CountStatistics.cpp"
    "${VUFS_ROOT}/src/Collections/EdgeWEDS.cpp"
    "${VUFS_ROOT}/src/Collections/FaceSCDS.cpp"
    "${VUFS_ROOT}/src/Collections/FaceVertexMesh.cpp"
    "${VUFS_ROOT}/src/Collections/FaceWEDS.cpp"
    "${VUFS_ROOT}/src/Collections/FileOperations.cpp"
    "${VUFS_ROOT}/src/Collections/Graph.cpp"
    "${VUFS_ROOT}/src/Collections/Interval_INT.cpp"
    "${VUFS_ROOT}/src/Collections/Interval_REAL.cpp"
    "${VUFS_ROOT}/src/Collections/IOFunctionsForDisks.cpp"
    "${VUFS_ROOT}/src/Collections/KDTreeInterval.cpp"
    "${VUFS_ROOT}/src/Collections/linkedList.cpp"
    "${VUFS_ROOT}/src/Collections/OperationsForPolygonMeshModel.cpp"
    "${VUFS_ROOT}/src/Collections/PolygonMeshModel.cpp"
    "${VUFS_ROOT}/src/Collections/Ratcliff_Triangulate2D.cpp"
    "${VUFS_ROOT}/src/Collections/rg_Curve.cpp"
    "${VUFS_ROOT}/src/Collections/rg_Geometry.cpp"
    "${VUFS_ROOT}/src/Collections/rg_Surface.cpp"
    "${VUFS_ROOT}/src/Collections/SimplificationByGarlan.cpp"
    "${VUFS_ROOT}/src/Collections/STL2MeshConverter.cpp"
    "${VUFS_ROOT}/src/Collections/StringFunctions.cpp"
    "${VUFS_ROOT}/src/Collections/SurfaceModel.cpp"
    "${VUFS_ROOT}/src/Collections/ThreadPool.cpp"
    "${VUFS_ROOT}/src/Collections/TopologicalEntity.cpp"
    "${VUFS_ROOT}/src/Collections/TriangleWithVertexNormal.cpp"
    "${VUFS_ROOT}/src/Collections/VertexSCDS.cpp"
    "${VUFS_ROOT}/src/Collections/VertexWEDS.cpp"
    "${VUFS_ROOT}/src/Collections/WingedEdgeDataStructure.cpp"
    "${VUFS_ROOT}/src/Color/Geometry2DColor.cpp"
    "${VUFS_ROOT}/src/GeomFunc/rg_BSplineIntersector.cpp"
    "${VUFS_ROOT}/src/GeomFunc/rg_BzIntersector.cpp"
    "${VUFS_ROOT}/src/GeomFunc/rg_CurveSurfaceFunc.cpp"
    "${VUFS_ROOT}/src/GeomFunc/rg_GeoFunc.cpp"
    "${VUFS_ROOT}/src/GeomFunc/rg_IntersectFunc.cpp"
    "${VUFS_ROOT}/src/GeomFunc/rg_IntervalIntersector.cpp"
    "${VUFS_ROOT}/src/GeomFunc/rg_IntsecImplicit3.cpp"
    "${VUFS_ROOT}/src/GeomFunc/rg_IntsecImplicit4.cpp"
    "${VUFS_ROOT}/src/GeomFunc/rg_IntsecImplicit5.cpp"
    "${VUFS_ROOT}/src/GeomFunc/rg_IntsecImplicit6.cpp"
    "${VUFS_ROOT}/src/GeomFunc/rg_IntsecImplicitNotUsingMathematica.cpp"
    "${VUFS_ROOT}/src/GeomFunc/rg_NUBSplineIntersector.cpp"
    "${VUFS_ROOT}/src/GeomFunc/rg_NURBSCurveIntersector.cpp"
    "${VUFS_ROOT}/src/GeomFunc/rg_TMatrix2D.cpp"
    "${VUFS_ROOT}/src/GeomFunc/rg_TMatrix3D.cpp"
    "${VUFS_ROOT}/src/MathUtils/EigenDecomposition.cpp"
    "${VUFS_ROOT}/src/MathUtils/nrutil.cpp"
    "${VUFS_ROOT}/src/MathUtils/PolynomialSolver/COMPLEX.cpp"
    "${VUFS_ROOT}/src/MathUtils/PolynomialSolver/MULLER.cpp"
    "${VUFS_ROOT}/src/MathUtils/PolynomialSolver/NEWTON.cpp"
    "${VUFS_ROOT}/src/MathUtils/PolynomialSolver/NULL.cpp"
    "${VUFS_ROOT}/src/MathUtils/PolynomialSolver/TOOLS.cpp"
    "${VUFS_ROOT}/src/MathUtils/rg_ComplexNumber.cpp"
    "${VUFS_ROOT}/src/MathUtils/rg_CubicImplicitEq.cpp"
    "${VUFS_ROOT}/src/MathUtils/rg_CubicPolynomial.cpp"
    "${VUFS_ROOT}/src/MathUtils/rg_ImplicitEqMatrix.cpp"
    "${VUFS_ROOT}/src/MathUtils/rg_ImplicitEquation.cpp"
    "${VUFS_ROOT}/src/MathUtils/rg_LinearPolynomial.cpp"
    "${VUFS_ROOT}/src/MathUtils/rg_MathFunc.cpp"
    "${VUFS_ROOT}/src/MathUtils/rg_Matrix.cpp"
    "${VUFS_ROOT}/src/MathUtils/rg_Polynomial.cpp"
    "${VUFS_ROOT}/src/MathUtils/rg_PolynomialWithBound.cpp"
    "${VUFS_ROOT}/src/MathUtils/rg_QuadraticImplicitEq.cpp"
    "${VUFS_ROOT}/src/MathUtils/rg_QuadraticPolynomial.cpp"
    "${VUFS_ROOT}/src/MathUtils/rg_QuarticPolynomial.cpp"
    "${VUFS_ROOT}/src/MathUtils/rg_RandomNumber.cpp"
    "${VUFS_ROOT}/src/MathUtils/rg_RationalPolynomial.cpp"
    "${VUFS_ROOT}/src/MathUtils/rg_RelativeOp.cpp"
    "${VUFS_ROOT}/src/MathUtils/Vector.cpp"
    "${VUFS_ROOT}/src/VD-related/rg_BetaSpan.cpp"
)
source_group("Sources" FILES ${Sources})

set(Headers
    "${VUFS_ROOT}/include/Arc2D.h"
    "${VUFS_ROOT}/include/Arc3D.h"
    "${VUFS_ROOT}/include/AxisAlignedBox.h"
    "${VUFS_ROOT}/include/BucketCellForDisks.h"
    "${VUFS_ROOT}/include/BucketForDisk.h"
    "${VUFS_ROOT}/include/BucketForPoints.h"
    "${VUFS_ROOT}/include/BucketForSpheres.h"
    "${VUFS_ROOT}/include/Circle3D.h"
    "${VUFS_ROOT}/include/ConstForBetaComplex.h"
    "${VUFS_ROOT}/include/ConstForColor.h"
    "${VUFS_ROOT}/include/CountStatistics.h"
    "${VUFS_ROOT}/include/Disk.h"
    "${VUFS_ROOT}/include/DistEventOnLineSegAndArc.h"
    "${VUFS_ROOT}/include/DistFunc.h"
    "${VUFS_ROOT}/include/DynamicDisk.h"
    "${VUFS_ROOT}/include/EdgeWEDS.h"
    "${VUFS_ROOT}/include/EigenDecomposition.h"
    "${VUFS_ROOT}/include/Ellipse2D.h"
    "${VUFS_ROOT}/include/Ellipsoid3D.h"
    "${VUFS_ROOT}/include/EnclosingCircleOfCircles.h"
    "${VUFS_ROOT}/include/EntityAccessiblePriorityQ.h"
    "${VUFS_ROOT}/include/FaceSCDS.h"
    "${VUFS_ROOT}/include/FaceVertexMesh.h"
    "${VUFS_ROOT}/include/FaceWEDS.h"
    "${VUFS_ROOT}/include/FileOperations.h"
    "${VUFS_ROOT}/include/Geometry2DColor.h"
    "${VUFS_ROOT}/include/Graph.h"
    "${VUFS_ROOT}/include/Interval_INT.h"
    "${VUFS_ROOT}/include/Interval_REAL.h"
    "${VUFS_ROOT}/include/IOFunctionsForDisks.h"
    "${VUFS_ROOT}/include/JenkinsTraub.h"
    "${VUFS_ROOT}/include/KDTree.h"
    "${VUFS_ROOT}/include/KDTreeInterval.h"
    "${VUFS_ROOT}/include/Line3D.h"
    "${VUFS_ROOT}/include/LineSegment3D.h"
    "${VUFS_ROOT}/include/nrutil.h"
    "${VUFS_ROOT}/include/OperationsForPolygonMeshModel.h"
    "${VUFS_ROOT}/include/Parabola2D.h"
    "${VUFS_ROOT}/include/Plane.h"
    "${VUFS_ROOT}/include/Polygon2D.h"
    "${VUFS_ROOT}/include/Polygon3D.h"
    "${VUFS_ROOT}/include/PolygonMeshModel.h"
    "${VUFS_ROOT}/include/PolynomialSolver.h"
    "${VUFS_ROOT}/include/PriorityQueue.h"
    "${VUFS_ROOT}/include/RandomDiskGenerator.h"
    "${VUFS_ROOT}/include/Ratcliff_Triangulate2D.h"
    "${VUFS_ROOT}/include/rg_Array.h"
    "${VUFS_ROOT}/include/rg_BandedMatrix.h"
    "${VUFS_ROOT}/include/rg_BetaSpan.h"
    "${VUFS_ROOT}/include/rg_Boundary3D.h"
    "${VUFS_ROOT}/include/rg_BoundingBox2D.h"
    "${VUFS_ROOT}/include/rg_BoundingBox3D.h"
    "${VUFS_ROOT}/include/rg_Box2DWithParameter.h"
    "${VUFS_ROOT}/include/rg_Box3D.h"
    "${VUFS_ROOT}/include/rg_BSplineCurve3D.h"
    "${VUFS_ROOT}/include/rg_BSplineIntersector.h"
    "${VUFS_ROOT}/include/rg_BSplineSurface3D.h"
    "${VUFS_ROOT}/include/rg_BzCurve2D.h"
    "${VUFS_ROOT}/include/rg_BzCurve3D.h"
    "${VUFS_ROOT}/include/rg_BzIntersector.h"
    "${VUFS_ROOT}/include/rg_BzSurface3D.h"
    "${VUFS_ROOT}/include/rg_CBzCurve2D.h"
    "${VUFS_ROOT}/include/rg_Circle2D.h"
    "${VUFS_ROOT}/include/rg_ComplexNumber.h"
    "${VUFS_ROOT}/include/rg_Const.h"
    "${VUFS_ROOT}/include/rg_CubicImplicitEq.h"
    "${VUFS_ROOT}/include/rg_CubicPolynomial.h"
    "${VUFS_ROOT}/include/rg_Curve.h"
    "${VUFS_ROOT}/include/rg_CurveSurfaceFunc.h"
    "${VUFS_ROOT}/include/rg_Cylinder3D.h"
    "${VUFS_ROOT}/include/rg_CylindericalSurface3D.h"
    "${VUFS_ROOT}/include/rg_dList.h"
    "${VUFS_ROOT}/include/rg_EllipticArc3D.h"
    "${VUFS_ROOT}/include/rg_Extrusion3D.h"
    "${VUFS_ROOT}/include/rg_Frustum3D.h"
    "${VUFS_ROOT}/include/rg_GeoFunc.h"
    "${VUFS_ROOT}/include/rg_Geometry.h"
    "${VUFS_ROOT}/include/rg_Graph.h"
    "${VUFS_ROOT}/include/rg_ImplicitEqMatrix.h"
    "${VUFS_ROOT}/include/rg_ImplicitEquation.h"
    "${VUFS_ROOT}/include/rg_IntersectFunc.h"
    "${VUFS_ROOT}/include/rg_IntervalIntersector.h"
    "${VUFS_ROOT}/include/rg_IntsecImplicit3.h"
    "${VUFS_ROOT}/include/rg_IntsecImplicit4.h"
    "${VUFS_ROOT}/include/rg_IntsecImplicit5.h"
    "${VUFS_ROOT}/include/rg_IntsecImplicit6.h"
    "${VUFS_ROOT}/include/rg_IntsecImplicitNotUsingMathematica.h"
    "${VUFS_ROOT}/include/rg_Line.h"
    "${VUFS_ROOT}/include/rg_Line2D.h"
    "${VUFS_ROOT}/include/rg_Line3D.h"
    "${VUFS_ROOT}/include/rg_LinearPolynomial.h"
    "${VUFS_ROOT}/include/rg_Link3D.h"
    "${VUFS_ROOT}/include/rg_ListByPtr.h"
    "${VUFS_ROOT}/include/rg_Loop3D.h"
    "${VUFS_ROOT}/include/rg_MathFunc.h"
    "${VUFS_ROOT}/include/rg_Matrix.h"
    "${VUFS_ROOT}/include/rg_NUBSplineCurve3D.h"
    "${VUFS_ROOT}/include/rg_NUBSplineIntersector.h"
    "${VUFS_ROOT}/include/rg_NUBSplineSurface3D.h"
    "${VUFS_ROOT}/include/rg_NURBSCurveIntersector.h"
    "${VUFS_ROOT}/include/rg_NURBSplineCurve3D.h"
    "${VUFS_ROOT}/include/rg_NURBSplineSurface3D.h"
    "${VUFS_ROOT}/include/rg_Outline3D.h"
    "${VUFS_ROOT}/include/rg_Parabola2D.h"
    "${VUFS_ROOT}/include/rg_PartialCylinder3D.h"
    "${VUFS_ROOT}/include/rg_Plane3D.h"
    "${VUFS_ROOT}/include/rg_Point2D.h"
    "${VUFS_ROOT}/include/rg_Point3D.h"
    "${VUFS_ROOT}/include/rg_Polyline2D.h"
    "${VUFS_ROOT}/include/rg_Polyline3D.h"
    "${VUFS_ROOT}/include/rg_Polynomial.h"
    "${VUFS_ROOT}/include/rg_PolynomialCurve2D.h"
    "${VUFS_ROOT}/include/rg_PolynomialWithBound.h"
    "${VUFS_ROOT}/include/rg_PrimitiveBox3D.h"
    "${VUFS_ROOT}/include/rg_PrimitiveCylinder3D.h"
    "${VUFS_ROOT}/include/rg_PrimitiveExtrusion3D.h"
    "${VUFS_ROOT}/include/rg_PrimitiveFrustum3D.h"
    "${VUFS_ROOT}/include/rg_QBzCurve2D.h"
    "${VUFS_ROOT}/include/rg_QuadraticImplicitEq.h"
    "${VUFS_ROOT}/include/rg_QuadraticPolynomial.h"
    "${VUFS_ROOT}/include/rg_QuarticPolynomial.h"
    "${VUFS_ROOT}/include/rg_RandomNumber.h"
    "${VUFS_ROOT}/include/rg_RationalPolynomial.h"
    "${VUFS_ROOT}/include/rg_RBzCurve2D.h"
    "${VUFS_ROOT}/include/rg_RBzCurve3D.h"
    "${VUFS_ROOT}/include/rg_RBzSurface3D.h"
    "${VUFS_ROOT}/include/rg_RelativeOp.h"
    "${VUFS_ROOT}/include/rg_RevolvedSurface.h"
    "${VUFS_ROOT}/include/rg_RPolynomialCurve2D.h"
    "${VUFS_ROOT}/include/rg_RQBzCurve2D.h"
    "${VUFS_ROOT}/include/rg_SignArray.h"
    "${VUFS_ROOT}/include/rg_Sphere3D.h"
    "${VUFS_ROOT}/include/rg_Surface.h"
    "${VUFS_ROOT}/include/rg_Tetrahedron.h"
    "${VUFS_ROOT}/include/rg_TMatrix2D.h"
    "${VUFS_ROOT}/include/rg_TMatrix3D.h"
    "${VUFS_ROOT}/include/rg_ToroidalSurface3D.h"
    "${VUFS_ROOT}/include/rg_Triangle.h"
    "${VUFS_ROOT}/include/rg_TrimmedNURBSSurface3D.h"
    "${VUFS_ROOT}/include/rg_TrimmedSurface3D.h"
    "${VUFS_ROOT}/include/rg_Triplet.h"
    "${VUFS_ROOT}/include/rg_WingedEdgeDataStructure.h"
    "${VUFS_ROOT}/include/SimplificationByGarlan.h"
    "${VUFS_ROOT}/include/sortFunc.h"
    "${VUFS_ROOT}/include/Sphere.h"
    "${VUFS_ROOT}/include/SquaredDistFuncLineSegArc.h"
    "${VUFS_ROOT}/include/SquaredDistFuncLineSegCircle.h"
    "${VUFS_ROOT}/include/SquaredDistFuncLineSegPoint.h"
    "${VUFS_ROOT}/include/STL2MeshConverter.h"
    "${VUFS_ROOT}/include/StringFunctions.h"
    "${VUFS_ROOT}/include/SurfaceModel.h"
    "${VUFS_ROOT}/include/ThreadPool.h"
    "${VUFS_ROOT}/include/TimeStatistics.h"
    "${VUFS_ROOT}/include/TopologicalEntity.h"
    "${VUFS_ROOT}/include/TriangleWithVertexNormal.h"
    "${VUFS_ROOT}/include/TrisectorOfSpaceByArc.h"
    "${VUFS_ROOT}/include/Vector.h"
    "${VUFS_ROOT}/include/VertexSCDS.h"
    "${VUFS_ROOT}/include/VertexWEDS.h"
    "${VUFS_ROOT}/include/VUFS_Info.h"
    "${VUFS_ROOT}/include/WingedEdgeDataStructure.h"
)
source_group("Headers" FILES ${Headers})

set(ALL_FILES
    ${Sources}
    ${Headers}
)



################################################################################
# Target
################################################################################
add_library(${PROJECT_NAME} STATIC ${ALL_FILES})
set_target_properties(
    ${PROJECT_NAME}
    PROPERTIES 
    ARCHIVE_OUTPUT_DIRECTORY ${LIB_OUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY ${LIB_OUT_DIR}
)
################################################################################
# Target name
################################################################################
set_target_properties(${PROJECT_NAME} PROPERTIES
    TARGET_NAME_DEBUG   "libVUFS_d"
    TARGET_NAME_RELEASE "libVUFS"
)
################################################################################
# Output directory
################################################################################
set_target_properties(${PROJECT_NAME} PROPERTIES
    OUTPUT_DIRECTORY_DEBUG   "${CMAKE_SOURCE_DIR}/"
    OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/"
)
################################################################################
# Include directories
################################################################################
target_include_directories(${PROJECT_NAME} PRIVATE
    "${VUFS_ROOT}/include"
)
